K8S/articles-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: articles-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: articleservice
  template:
    metadata:
      labels:
        app: articleservice
    spec:
      containers:
        - name: articleservice
          image: dreherfranco/article-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: articles-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: articleservice
  ports:
  - name: articleservice
    protocol: TCP
    port: 80
    targetPort: 80
