K8S/articles-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: articlenpservice-srv
spec:
  type: NodePort
  selector:
    app: articleservice
  ports:
  - name: articleservice
    protocol: TCP
    port: 80
    targetPort: 80
