K8S/categories-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: categorynpservice-srv
spec:
  type: NodePort
  selector:
    app: categoryservice
  ports:
  - name: categoryservice
    protocol: TCP
    port: 80
    targetPort: 80
