K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: microservicios-dreherfranco.com
      http:
        paths:
          - path: /api/categories
            pathType: Prefix
            backend:
              service:
                name: categories-clusterip-srv
                port:
                  number: 80
          - path: /api/articles
            pathType: Prefix
            backend:
              service:
                name: articles-clusterip-srv
                port:
                  number: 80
